--- a/.github/workflows/css.yml
+++ b/.github/workflows/css.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge
-      run: surge ./ CSSGallerySaad.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./ CSSGallerySaad1.surge.sh --token ${{secrets.SURGE_TOKEN}}
